<resources>
    <string name="app_name">Diary</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Messages -->
    <string name="msg_approve">Approve</string>
    <string name="msg_ok">Ok</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_check_delete">Do you really want to delete it?</string>
    <string name="msg_check_general">Are you sure?</string>
    <string name="msg_check_save">Data will be overwritten. Do you want to proceed?</string>
    <string name="msg_check_cancel">Changes will not be saved. Do you want to proceed?</string>
    <string name="msg_unable_save">Unable to save data: </string>

    <!-- Text Preferences -->
    <string name="text_title">List text size</string>
    <string name="text_header">Text preference</string>
    <string name="text_date">Date text size</string>
    <string name="text_editor">Editor text size</string>
    <string name="text_gravity">Text aligment</string>

    <!-- Text default values -->
    <string name="editor_default_value">18</string>
    <string name="date_default_value">14</string>
    <string name="title_default_value">34</string>
    <string name="text_default_gravity">CENTER</string>
</resources>
