<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/text_header">

        <ListPreference
            app:defaultValue="@string/title_default_value"
            app:entries="@array/title_text_entries"
            app:entryValues="@array/title_text_value"
            app:key="title_text"
            app:title="@string/text_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/date_default_value"
            app:entries="@array/title_text_entries"
            app:entryValues="@array/date_text_values"
            app:key="date_text"
            app:title="@string/text_date"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/editor_default_value"
            app:entries="@array/title_text_entries"
            app:entryValues="@array/text_editor_value"
            app:key="editor_text"
            app:title="@string/text_editor"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="@string/text_default_gravity"
            app:entries="@array/title_gravity_entries"
            app:entryValues="@array/title_gravity_values"
            app:key="gravity_text"
            app:title="@string/text_gravity"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
